k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpdesk-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: helpdesk-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helpdesk-frontend
                port:
                  number: 80
